[gd_scene load_steps=2 format=3 uid="uid://c8tpsuuasqgs6"]

[ext_resource type="Script" path="res://scripts/multiplayer/menus/multiplayer_menu_manager.gd" id="1_s7t63"]

[node name="Lobby" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MultiplayerMenuManager" type="Node" parent="."]
script = ExtResource("1_s7t63")

[node name="MultiplayerContainer" type="VBoxContainer" parent="MultiplayerMenuManager"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -238.0
offset_top = -170.0
offset_right = 238.0
offset_bottom = 170.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 40
alignment = 1

[node name="HostButton" type="Button" parent="MultiplayerMenuManager/MultiplayerContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 34
text = "Host game"

[node name="JoinButton" type="Button" parent="MultiplayerMenuManager/MultiplayerContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 34
text = "Join game"
